    (Closes: #600462).
    To avoid problems on upgrading, the database file name was changed
    from $HOME/.lbdb/m_inmail.list to $HOME/.lbdb/m_inmail.utf-8.  If you
    want to keep your old (ISO-8859-15 encoded) database, you can just
    append it to the new file by
     cd $HOME/.lbdb
     iconv -f iso-8859-15 -t utf-8 < m_inmail.list >> m_inmail.utf-8
  * Update autotools.

 -- Roland Rosenfeld <roland@debian.org>  Sun, 25 Sep 2016 14:47:58 +0200

lbdb (0.41) unstable; urgency=medium

  * Remove CVS $Id$ tags and the like, which don't work with git.
  * Apply several patches by Lucas Hoffmann:
    - m_wanderlust: Fix variable name.
    - m_gnomecard, m_pine: Remove needless backslashes from embedded AWK.
    - lbdbq: Optimize counting lines.
    - lbdbq: Remove unreached break after exit.
  * Upgrade to Standards-Version 3.9.7 (no changes).
  * Update debian/copyright.
  * fetchaddr: avoid segfault on empty lines (Closes: #715901).
  * fetchaddr: change real name length limit from 30 to 70.  Thanks to
    Andrey Skvortsov for providing a patch (Closes: #780532).
  * vcquery: order N: field: Prefixes GivenName AddName FamilyName Suffix
    (Closes: #578155).
  * Remove lbdb.spec on clean target.
  * Move LIBICONV linking to the end of the cc call to make cygwin happy.
  * Substitute ${prefix} in @sysconfdir@ in mutt_ldap_query.pl.
  * Fix more bashisms (Thanks to Thorsten Glaser).
  * Update config.guess and config.sub.
  * Optimize autoconf to get version from Debian changelog.

 -- Roland Rosenfeld <roland@debian.org>  Sat, 05 Mar 2016 11:54:15 +0100

lbdb (0.40) unstable; urgency=medium

  * Upgrade to Standards-Version 3.9.6 (no changes).
  * Avoid gpg trustdb check in m_gpg, since this may take a long time
    while lbdb is not responsible.  Thanks to Gregor Zattler for providing
    a patch (Closes: #805235).
  * mutt_ldap_query: escape parentheses, since perl 5.22 complains about
    this otherwise.  Thanks to Olivier Mehani and Francois Charlier.