@@ -3,6 +3,7 @@
 # -*-sh-*-
 #
 #     Copyright (C) 1999-2016  Roland Rosenfeld <roland@spinnaker.de>
+#     Copyright (C) 2007       Yaroslav Halchenko <debian@onerussian.com>
 # 
 #     This program is free software; you can redistribute it and/or modify
 #     it under the terms of the GNU General Public License as published by
@@ -27,28 +28,38 @@ exec_prefix=@exec_prefix@
 dotlock=@DOTLOCK@
 fetchaddr=@libdir@/fetchaddr
 db=$HOME/.lbdb/m_inmail.utf-8
+munge="${prefix}/lib/lbdb/munge"
 
-if [ "$SORT_OUTPUT" = "false" -o "$SORT_OUTPUT" = "no" ]
+if [ ! -f $db.dirty ]
 then
-    munge=@libdir@/munge-keeporder
-else
-    munge=@libdir@/munge
-fi
-
-if [ ! -f $db.dirty ]; then
     # Nothing to do
     exit 0
 fi
 
-if $dotlock -r 10 -f $db
+if [ "$SORT_OUTPUT" = "false" -o "$SORT_OUTPUT" = "no" ]
 then
-  : # okay, do nothing
-else
-  echo "Can't lock $db [dotlock returned $rv]." >&2
-  exit 1
+    munge_options="keeporder=1"
 fi
 
-if $munge < $db > $db.$$.tmp 2>/dev/null
+if [ ! -z "$MUNGE_LIMITCOUNT" ]
+then
+    munge_options="$munge_options limitcount=$MUNGE_LIMITCOUNT"
+fi
+
+if [ ! -z "$MUNGE_LIMITDATE" ]
+then
+    munge_options="$munge_options limitdate='$MUNGE_LIMITDATE'"
+fi
+
+if $dotlock -r 10 -f $db
+then
+    : # okay, do nothing
+else
+    echo "Can't lock $db [dotlock returned $rv]." >&2
+    exit 1
+fi
+
+if $munge ${munge_options} < $db > $db.$$.tmp
 then
     # only move, if munge successful:
     mv -f $db.$$.tmp $db
