@@ -1,39 +1,0 @@
-#! @AWK@ -f
-#
-# -*-awk-*-
-#
-#     Copyright (C) 1998-2000  Thomas Roessler <roessler@guug.de>
-#                        2000  Roland Rosenfeld <roland@spinnaker.de>
-# 
-#     This program is free software; you can redistribute it and/or modify
-#     it under the terms of the GNU General Public License as published by
-#     the Free Software Foundation; either version 2 of the License, or
-#     (at your option) any later version.
-# 
-#     This program is distributed in the hope that it will be useful,
-#     but WITHOUT ANY WARRANTY; without even the implied warranty of
-#     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-#     GNU General Public License for more details.
-# 
-#     You should have received a copy of the GNU General Public License
-#     along with this program; if not, write to the Free Software Foundation,
-#     Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301,, USA.
-
-BEGIN {
-    FS = "\t";
-    i = 0;
-}
-
-{
-    line[$1] = $0;
-    pos[$1] = i;
-    idx[i++] = $1;
-}
-
-END {
-    for (j = 0; j < i; j++) {
-	if (pos[idx[j]] == j) {
-	    print line[idx[j]];
-	}
-    }
-}
